--- a/front-end-server/styles.css
+++ b/front-end-server/styles.css
@@ -221,3 +221,11 @@
       width: 100%;
       background-color: rgb(236, 204, 161);
     }
+
+    #displayScottAuto {
+     float: left;
+     color: #9225ec;
+
+    }
+
+    
